note item view fix; progressbar doesn't visible if count of tasks === 0

--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -290,6 +290,7 @@ html, body {
             border: none;
             // Favorite button
             .favorite {
+                cursor: pointer;
                 color: darken(#FFF, 30%);
                 &:hover {
                     text-decoration: none;
